Coordinator protocol implemented. Last commit for this project.

--- a/iOSAppWithCoordinators/Home/View/Base.lproj/Home.storyboard
+++ b/iOSAppWithCoordinators/Home/View/Base.lproj/Home.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ldO-nV-Dk1">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gfm-0r-6Zb">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
@@ -51,24 +51,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8kV-Qm-HzP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="610.14492753623188" y="-18.75"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="5F7-yN-Mm0">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ldO-nV-Dk1" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RJN-D3-EI5">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="gfm-0r-6Zb" kind="relationship" relationship="rootViewController" id="8Tj-Oh-KOY"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aK1-ad-PDw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-300" y="-19.419642857142858"/>
         </scene>
     </scenes>
     <resources>
